# glikonal_old

./: MANIFEST.in  README.md  pyproject.toml  setup.py
gliding_distance/: examples_min_return_altitude.ipynb  gliding_distance_real_airport.ipynb
glikonal/: __version__.py  locate.pyx  solver.pxd  solver.pyx
