[build-system]
requires = ['setuptools', 'wheel', 'Cython>=0.29.14', 'numpy>=1.18.0', 'matplotlib', 'rasterio']
build-backend = 'setuptools.build_meta'

[project]
name = 'glikonal'
version = '0.0.0'
authors = [
    {name='Malcolm C. A. White, Giovanni Piccioli', email='giovannipiccioli@gmail.com'}
]
description = 'Compute the minimal altitude to safely return to an airport in gliding flight'
readme = 'README.md'
requires-python = '>= 3.9'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Physics'
]

[project.urls]
'Homepage' = 'https://github.com/giovannipiccioli/glikonal'
'Bug Tracker' = 'https://github.com/giovannipiccioli/glikonal/issues'
